# telegram-scraper

./: .env.example  .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  my_telegram_session.session  pyproject.toml  requirements.txt
api/: auth.py  main.py  routes.py
api/database/: database.py
api/exceptions/: auth_exceptions.py  user_exceptions.py
api/models/: encrypter.py  message_presenter.py  user_presenter.py
api/services/: message_service.py
app/: client.py  main.py
app/api/: routes.py
app/database/: database.py
app/exceptions/: message_exceptions.py
app/models/: data_models.py  encrypter.py  exceptions.py  message_presenter.py  parser.py  scraper.py  user.py  user_presenter.py
app/services/: auth_service.py  message_service.py  user_service.py
app/tests/: test_encrypter.py  test_parser.py  test_presenter.py
app/utils/: responses.py
myscraper/: api.py  bot.py  client.py  database.py  main.py  telegram_bot.py
myscraper/api/: routes.py
myscraper/database/: database.py
myscraper/models/: encrypter.py  exceptions.py  message.py  message_presenter.py  parser.py  presenter.py  scraper.py  user.py  user_presenter.py
myscraper/service/: message_service.py  service.py
myscraper/services/: auth_service.py  message_service.py  user_service.py
myscraper/tests/: test_presenter.py
myscraper/utils/: swagger_responses.py
scraper/: client.py  messages.txt  my_telegram_session.session  requirements_scraper.txt
scraper/models/: file_saver.py  (+5 more)
tests/: test_auth.py  test_encrypter.py  test_input_controller.py  test_main.py  test_parser.py  test_presenter.py
yara/: detect_mercadolibre.yara  detect_rule.py  messages.txt  requirements_yara.txt  script_yara.py
(+5 files in other folders)
