[tool.poetry]
name = "mysraper"
version = "0.1.0"
description = ""
authors = ["celedituro <cdituro@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.15.0"
pytest = "^6.2.5"
fastapi = "^0.68.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
